<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_session"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_add"
        android:shortcutShortLabel="@string/shortcut_new_session"
        android:shortcutLongLabel="@string/shortcut_new_session_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.hermes.mobile"
            android:targetClass="com.hermes.mobile.MainActivity"
            android:data="hermes://main?action=new-chat" />
    </shortcut>
    <shortcut
        android:shortcutId="open_settings"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:shortcutShortLabel="@string/shortcut_settings"
        android:shortcutLongLabel="@string/shortcut_settings_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.hermes.mobile"
            android:targetClass="com.hermes.mobile.SettingsActivity" />
    </shortcut>
</shortcuts>
